--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Startside</title>
 </head>
 <body>
+    
     <main>
+        <header class="header">
+            <img id="logo" src="./images/svlogo.png" alt="">
+            <nav>
+                <a href="#">Bli med</a>
+                <a href="#">Om oss</a>
+            </nav>
+        </header>
         <h1>For de mange, ikke for de få</h1>
         <div class="buttons">
             <button>Bli med</button>
