Added more sites etc.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <title>Startside</title>
 </head>
 <body>
-    
     <main>
         <header class="header">
             <img id="logo" src="./images/svlogo.png" alt="">
             <nav>
-                <a href="#">Bli med</a>
-                <a href="#">Om oss</a>
+                <a href="innmelding.html">Bli med</a>
+                <a href="info.html">Om oss</a>
             </nav>
         </header>
-        <h1>For de mange, ikke for de få</h1>
-        <div class="buttons">
-            <button>Bli med</button>
-            <button>Om oss</button>
+        <div id="showcase">
+            <h1>For de mange, ikke for de få</h1>
+            <div class="buttons">
+                <a href="innmelding.html"><button>Bli med</button></a>
+                <a href="info.html"><button>Om oss</button></a>
+            </div>
         </div>
     </main>
 </body>
