Gjorde mange endringer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header class="header">
-            <img id="logo" src="./images/svlogo.png" alt="">
+            <a href="#"><img id="logo" src="./images/svlogo.png" alt=""></a>
             <nav>
                 <a href="innmelding.html">Bli med</a>
                 <a href="info.html">Om oss</a>
