--- a/innmelding.html
+++ b/innmelding.html
@@ -7,6 +7,35 @@
     <title>Meld deg inn</title>
 </head>
 <body>
-    
+    <main>
+        <header class="header">
+            <a href="index.html"><img id="logo" src="./images/svlogo.png" alt=""></a>
+            <nav>
+                <a href="innmelding.html">Bli med</a>
+                <a href="info.html">Om oss</a>
+            </nav>
+        </header>
+        <img id="meldinn" src="./images/bli-medlem.jpg" alt="" >
+        <form action="">
+            <h1>Meld deg inn i SV</h1>
+            <div>
+                <label for="navn">Fullt navn</label>
+                <input type="text" name="navn" id="navn">
+            </div>
+            <div>
+                <label for="telefon">Telefonnummer</label>
+                <input type="text" name="telefon" id="telefon">
+            </div>
+            <div>
+                <label for="epost">Epost</label>
+                <input type="text" name="epost" id="epost">
+            </div>
+            <div>
+                <label for="adresse">Adresse</label>
+                <input type="text" name="adresse" id="adresse">
+            </div>
+            <button>Send inn</button>
+        </form>
+    </main>
 </body>
 </html>
