--- a/info.html
+++ b/info.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="info.css">
     <title>Om oss</title>
 </head>
 <body>
-    
+    <main>
+        <header class="header">
+            <a href="index.html"><img id="logo" src="./images/svlogo.png" alt=""></a>
+            <nav>
+                <a href="innmelding.html">Bli med</a>
+                <a href="info.html">Om oss</a>
+            </nav>
+        </header>
+        <h1>Våre saker</h1>
+        <article class="oversikt">
+            <a href="#" class="sak">Miljø og klima</a>
+            <a href="#" class="sak">Likestilling</a>
+            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">ABC</a>
+        </article>
+    </main>
 </body>
 </html>
