Endringer til infosiden

--- a/info.html
+++ b/info.html
@@ -18,11 +18,11 @@
         <h1>Våre saker</h1>
         <article class="oversikt">
             <a href="#" class="sak">Miljø og klima</a>
-            <a href="#" class="sak">Likestilling</a>
-            <a href="#" class="sak">ABC</a>
-            <a href="#" class="sak">ABC</a>
-            <a href="#" class="sak">ABC</a>
-            <a href="#" class="sak">ABC</a>
+            <a href="#" class="sak">Feminisme og likestilling</a>
+            <a href="#" class="sak">Inkludering og mangfold</a>
+            <a href="#" class="sak">Flyktinger og integrering</a>
+            <a href="#" class="sak">Fred og internasjonalt samarbeid</a>
+            <a href="#" class="sak">Arbeidernes rettigheter</a>
             <a href="#" class="sak">ABC</a>
             <a href="#" class="sak">ABC</a>
         </article>
