--- a/innmelding.html
+++ b/innmelding.html
@@ -17,6 +17,7 @@
         </header>
         <img id="meldinn" src="./images/bli-medlem.jpg" alt="" >
         <form action="">
+            <div class="skjema">
             <h1>Meld deg inn i SV</h1>
             <div>
                 <label for="navn">Fullt navn</label>
@@ -35,6 +36,7 @@
                 <input type="text" name="adresse" id="adresse">
             </div>
             <button>Send inn</button>
+        </div>
         </form>
     </main>
 </body>
