Endret struktur, gjort ferdig nettsted

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Startside</title>
 </head>
 <body>
+    <!-- Refleksjonsnotat er i README.md -->
     <main>
         <header class="header">
-            <a href="#"><img id="logo" src="./images/svlogo.png" alt=""></a>
+            <a href="#"><img id="logo" src="./css/images/svlogo.png" alt="SVs logo. Klikk her for å komme tilbake til hovedsiden."></a>
             <nav>
                 <a href="innmelding.html">Bli med</a>
                 <a href="info.html">Om oss</a>
