--- a/info.html
+++ b/info.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="info.css">
+    <link rel="stylesheet" href="css/info.css">
     <title>Om oss</title>
 </head>
 <body>
     <main>
         <header class="header">
-            <a href="index.html"><img id="logo" src="./images/svlogo.png" alt=""></a>
+            <a href="index.html"><img id="logo" src="./css/images/svlogo.png" alt="SVs logo. Klikk her for å komme tilbake til hovedsiden."></a>
             <nav>
                 <a href="innmelding.html">Bli med</a>
                 <a href="info.html">Om oss</a>
@@ -17,14 +17,14 @@
         </header>
         <h1>Våre saker</h1>
         <article class="oversikt">
-            <a href="#" class="sak">Miljø og klima</a>
-            <a href="#" class="sak">Feminisme og likestilling</a>
-            <a href="#" class="sak">Inkludering og mangfold</a>
-            <a href="#" class="sak">Flyktinger og integrering</a>
-            <a href="#" class="sak">Fred og internasjonalt samarbeid</a>
-            <a href="#" class="sak">Arbeidernes rettigheter</a>
-            <a href="#" class="sak">ABC</a>
-            <a href="#" class="sak">ABC</a>
+            <a href="sak-template.html" class="sak">Miljø og klima</a>
+            <a href="sak-template.html" class="sak">Feminisme og likestilling</a>
+            <a href="sak-template.html" class="sak">Inkludering og mangfold</a>
+            <a href="sak-template.html" class="sak">Flyktinger og integrering</a>
+            <a href="sak-template.html" class="sak">Fred og internasjonalt samarbeid</a>
+            <a href="sak-template.html" class="sak">Arbeidernes rettigheter</a>
+            <a href="sak-template.html" class="sak">ABC</a>
+            <a href="sak-template.html" class="sak">ABC</a>
         </article>
     </main>
 </body>
