--- a/innmelding.html
+++ b/innmelding.html
@@ -9,14 +9,14 @@
 <body>
     <main>
         <header class="header">
-            <a href="index.html"><img id="logo" src="./images/svlogo.png" alt=""></a>
+            <a href="index.html"><img id="logo" src="./css/images/svlogo.png" alt="SVs logo. Klikk her for å komme tilbake til hovedsiden."></a>
             <nav>
                 <a href="innmelding.html">Bli med</a>
                 <a href="info.html">Om oss</a>
             </nav>
         </header>
-        <img id="meldinn" src="./images/bli-medlem.jpg" alt="" >
-        <form action="">
+        <img id="meldinn" src="./css/images/bli-medlem.jpg" alt="" >
+        <form action="./innmelding-bekreftelse.html">
             <div class="skjema">
             <h1>Meld deg inn i SV</h1>
             <div>
@@ -35,7 +35,7 @@
                 <label for="adresse">Adresse</label>
                 <input type="text" name="adresse" id="adresse">
             </div>
-            <button>Send inn</button>
+            <a href="innmelding-bekreftelse.html"><button>Send inn</button></a>
         </div>
         </form>
     </main>
